--- a/css/index.css
+++ b/css/index.css
@@ -144,6 +144,7 @@ header{
     color: #999;
     font-size: 12px;
     line-height: 32px;
+    overflow: hidden;
 }
 .left-head{
     float: left;
@@ -641,7 +642,7 @@ main .bigbanner .bannerbox{
 .active .item{
     width:485px;
     height:370px;
-    margin-right: 13px;
+    margin-right: 12px;
     float: left;
 }
 .active .item .title{
@@ -676,7 +677,7 @@ main .bigbanner .bannerbox{
     position: absolute;
     top:0;
     right:14px;
-    width:42px;
+    width:52px;
     height:54px;
     line-height: 54px;
     background-size:18px 18px;
@@ -792,7 +793,7 @@ main .bigbanner .bannerbox{
     line-height: 28px;
 }
 .floor .title .hotlist{
-    width:800px;
+    width:650px;
     height:100%;
     float: right;
 }
@@ -1054,15 +1055,15 @@ main .bigbanner .bannerbox{
 .like .title span{
     position: relative;
 }
+.like .wonders{
+    width:100%;
+}
 .like .wonder{
     width:100%;
     margin:10px 0;
-    height:316px;
+    overflow: hidden;
 }
 .like .wonder li{
-    width:235px;
-    height:301px;
-    margin-right:12px;
     float: left;
     position: relative;
     border-bottom: 15px solid #f5f5f5;
@@ -1070,15 +1071,14 @@ main .bigbanner .bannerbox{
 }
 .like .wonder li a{
     display: block;
-    width:234px;
-    height:300px;
+    width:100%;
+    height:100%;
     border: 1px solid #fff;
 }
 .like .wonder li img{
     display: block;
     width:185px;
     height:185px;
-    margin:20px auto 0;
 
 }
 .like .wonder li .tit{
@@ -1116,7 +1116,7 @@ main .bigbanner .bannerbox{
 }
 /* 底部 */
 footer{
-    widows: 100%;
+    width: 100%;
     min-height:558px;
     border-top: 1px solid #d1d7dc;
     background-color: #fff;
