--- a/css/index.css
+++ b/css/index.css
@@ -144,7 +144,11 @@ header{
     color: #999;
     font-size: 12px;
     line-height: 32px;
-    overflow: hidden;
+}
+.topnav:after{
+    content: '';
+    display: block;
+    clear: both;
 }
 .left-head{
     float: left;
